Update AsyncController.java
修改解密逻辑